fixing margin bottom on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,7 @@ section {
 }
 @media (min-width: 768px) {
   html {
-    overflow-y: hidden;
+    overflow: hidden;
   }
 }
 @media (max-width: 1200px) {
@@ -925,6 +925,7 @@ section {
 @media (max-width: 768px) {
   .social-saring-icons {
     margin-top: 3rem;
+    margin-bottom: 2rem;
   }
 }
 
